--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Cat's Shop</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/cats-shop">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
